env/code_53c040a01509c/stderr.txt
main.java:10: error: incompatible types
	    while(n)
	          ^
  required: boolean
  found:    int
1 error
